add some content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/975df08e90.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/GPPT.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Anti-Gpt</title>
 </head>
 <body>
@@ -26,6 +26,10 @@
             <i class="fa fa-trash-o" aria-hidden="true" id="trash"></i>
         </div>
     </div>
+    
+    <div class="how">
+        <div class="howContainer">dwadw</div>
+    </div>
     <footer>
     <div class="details">
         <div class="grid">
@@ -39,9 +43,9 @@
             </div>
             <div class="socials">
                 <h3>Social Media</h3>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i> R-URU</a>
+                <a href="https://github.com/R-uru" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> R-URU</a>
                 <br>
-                <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i> Russell James</a>
+                <a href="https://www.facebook.com/ruruonfb" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i> Russell James</a>
             </div>
             <div class="creator">
                 <h3>Creator</h3>
