--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
     </div>
     
     <div class="how">
-        <div class="howContainer">dwadw</div>
+        <div class="howContainer">
+            <h3>How it works?</h3>
+            <p>It works by adding <b>special</b> hidden character in every letters.</p>
+            <p>I use this character <b>[U+200E]</b>, you can get this in <b><a href="https://unicode-explorer.com/c/200E" target="_blank">here.   </a></b></p>
+            <br>
+            <h3>Example:</h3>
+            <img src="img/ai-unsupported.png" alt="">
+            <p>I inputed <b>Hi</b> then the <b>'x'</b> character will be the invisible character outputing this: <b>Hxix</b>. Making the character double it's count.</p>
+            <p>By using the special <b>hidden</b> character it will confuse the ai detection, resulting to confusion or unsuported language.</p>
+            <br>
+            <h3>How accurate?</h3>
+            <img src="img/zerogpt.png" alt="">
+            <p>This was tested on <b><a href="https://www.zerogpt.com/">ZeroGpt</a></b></p>
+            <p>By testing it from <b>100%</b> ai detected to <b>0</b> on other ai detector.</p>
+            <br>
+            <h3>Effective in?</h3>
+            <p>Sentences or words it is not recomment this to use in codes, this will result a error on your code.</p>
+            <br>
+            <h3>Tested in:</h3>
+            <p><a href="https://www.zerogpt.com/">ZeroGpt</a></p>
+            <p><a href="https://copyleaks.com/ai-content-detector">Copy Leaks</a></p>
+            <p><a href="https://www.scribbr.com/ai-detector/">Scribbr ai-detector</a></p>
+            <p><a href=""></a></p>
+            <br>
+            <h3>Counter to detect</h3>
+            <p>by using gpt sometimes by asking gpt if he write the paragraph or sentence, gpt sometimes recognize it.</p>
+            <p>Using <b><a href="https://gptzero.me/">GPTZero</a></b> even there is a special character this website can detect it.</p>
+
+        </div>
     </div>
     <footer>
     <div class="details">
