fix typo and bugs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>By testing it from <b>100%</b> ai detected to <b>0</b> on other ai detector.</p>
             <br>
             <h3>Effective in?</h3>
-            <p>Sentences or words it is not recomment this to use in codes, this will result a error on your code.</p>
+            <p>Sentences or words it is not recommend this to use in codes, this will result an error on your code.</p>
             <br>
             <h3>Tested in:</h3>
             <p><a href="https://www.zerogpt.com/">ZeroGpt</a></p>
@@ -55,16 +55,14 @@
             <p><a href=""></a></p>
             <br>
             <h3>Counter to detect</h3>
-            <p>by using gpt sometimes by asking gpt if he write the paragraph or sentence, gpt sometimes recognize it.</p>
-            <p>Using <b><a href="https://gptzero.me/">GPTZero</a></b> even there is a special character this website can detect it.</p>
+            <p>by using gpt, sometimes by asking gpt if he write the paragraph or sentence, gpt sometimes recognize it.</p>
+            <p>Using <b><a href="https://gptzero.me/">GPTZero</a></b> to detect the ai work even there is a special character.</p>
 
         </div>
     </div>
     <footer>
     <div class="details">
         <div class="grid">
-            <div class="about">
-            </div>
             <div class="contacts">
                 <h3>Contacts</h3>
                 <p><i class="fa fa-volume-control-phone" aria-hidden="true"></i> 0963404****</p>
